[package]
name = "tp_limiter"
version = "0.1.0"
edition = "2021"
authors = ["Viktor Lazarev <taurus101v@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gentoid/tp_limiter"
description = "One more True Peak Limiter (CLAP) plugin // WIP"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }
realfft = "3.3"
rubato = "0.15.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
